--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">react_native_boilerplate</string>
+    <string name="facebook_app_id">339425210262688</string>
 </resources>
